# reactionDiffusion

./: README.md
code/: .gitignore  CMakeLists.txt  main.cc
code/include/: reactMath.hpp
code/src/: reactMath.cpp
latex/: main.fdb_latexmk  main.fls  main.tex
